--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ css(responsiveness, styling, etc)-->
     <title>News API</title>
     <!-- including bootstrap basic stylesheet for responsiveness and styling-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <script type="text/javascript" src="./JS/keys.js"></script>
 </head>
 <body>
     <!-- including html from bootstrap for nav bar -->
@@ -59,7 +60,6 @@ css(responsiveness, styling, etc)-->
 
     <!-- including bootstrap basic script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="JS/proto_lib.js"></script> -->
     <script src="JS/news.js"></script>
 </body>
 </html>
