--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ css(responsiveness, styling, etc)-->
     <!-- including bootstrap basic stylesheet for responsiveness and styling-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <script type="text/javascript" src="./JS/keys.js"></script>
+    <script type="text/javascript" src="./JS/news.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script> <!--including bootstrap-->
 </head>
 <body>
     <!-- including html from bootstrap for nav bar -->
@@ -57,10 +59,6 @@ css(responsiveness, styling, etc)-->
         </ul>
         <hr>
     </div>
-
-    <!-- including bootstrap basic script -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="JS/news.js"></script>
 </body>
 </html>
 <a href=""></a>
